created shared and todos service/repository
